--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
+    "react-lazy-load": "^4.0.1",
     "react-loader-spinner": "^5.3.4",
+    "react-pdf": "^6.2.2",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.11.0",
     "sort-by": "^1.2.0"
