--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-pdf": "^6.2.2",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.11.0",
+    "react-to-pdf": "^0.0.14",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
